--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 dist: xenial
 go:
   - "1.12"
+gobuild_args:
+  - golang.org/x/crypto/scrypt
 script:
   - go run ./main.go
   - go run -race ./main.go
